('GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.7.3

	- Fixed problem preventing some pg_type bind_arrays
		from working [GSM]

2.7.2 Released May 14, 2008 (subversion r11269)

	- Handle embedded commas in quotes properly when destringifying 
		arrays.(CPAN bug #35862) [GSM]
	- Fix typo in docs with trace_parser_flags() (Martin J. Evans)
	- More testing tweaks [GSM]

2.7.1 Released May 11, 2008 (subversion r11250)

	- Yet more minor testing tweaks. [GSM]

2.7.0 Released May 10, 2008 (subversion r11239)

	- Have $dbh->quote() return E'' when server is >= 8.1 and string contains 
		backslashes. Fixes any problems with standard_conforming_strings.
		(CPAN bug #27538) [GSM]

2.6.6 Released May 7, 2008 (subversion r11214)

	- Fix minor problem in t/99_spellcheck.t

2.6.5 Released May 7, 2008 (subversion r11209)

	- Add spell checker to tests. [GSM]
	- More tweaks to the testing suite. [GSM]

2.6.4 Released May 2, 2008 (subversion r11186)

	- More tweaks to the test suite.

2.6.3 Released May 1, 2008 (subversion r11169)

	- Minor tweaks to the test suite.

2.6.2 Released April 30, 2008 (subversion r11161)

	- Fix coredump when pg_getcopydata copies 0 rows into a 
		freshly created var. (CPAN bug #35556) [David Harris]
	- Allow 'make test' create a test database from scratch if
		it cannot find an existing one to use. [GSM]

2.6.1 Released April 22, 2008 (subversion r11133)

	- Don't free placeholder section, fixes problem when using 
		more than one named placeholder with the same name.
		(CPAN bug #35303) [GSM]

2.6.0 Released April 16, 2008 (subversion r11095)

	- Make pg_notifies a true function, so that you can now
		use $dbh->pg_notifies instead of $dbh->func('pg_notifies') [GSM]
	- Various performance improvements [GSM]
	- Fix minor build and compilation issues with Strawberry Perl [GSM]
	- Add Bundle::DBD::Pg [GSM]

2.5.1 Released April 7, 2008 (subversion r11056)

	- Correctly handle negative PID numbers on Win32 systems when