@@ -1305,6 +1305,8 @@ SV * pg_db_pg_notifies (SV * dbh, imp_dbh_t * imp_dbh)
 	ret=newAV();
 	av_push(ret, newSVpv(notify->relname,0) );
 	av_push(ret, newSViv(notify->be_pid) );
+	av_push(ret, newSVpv(notify->extra,0) );
+	/* Think about utf-8 in payloads someday... */
 	
 	TRACE_PQFREEMEM;
  	PQfreemem(notify);
