@@ -2,6 +2,8 @@
 
 2.7.3
 
+	- Added in payload strings for LISTEN/NOTIFY in 8.4 
+		via $dbh->pg_notifies() [GSM]
 	- Fixed problem preventing some pg_type bind_arrays
 		from working [GSM]
 
